cmake_minimum_required(VERSION 3.15)
project(C++Base)

add_definitions(-std=c++11)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(src/Chapter01)
add_subdirectory(src/Chapter02)
add_subdirectory(src/Chapter03)
add_subdirectory(src/Chapter04)
add_subdirectory(src/Chapter06)
add_subdirectory(src/Chapter05)
add_subdirectory(src/Chapter07)
